--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -28,7 +28,7 @@ jobs:
             depots
 
   generate-convarlist:
-    name: generate client convarlist
+    name: generate client and server convarlist
     runs-on: windows-2022
     timeout-minutes: 15
     needs: get-depots
@@ -49,11 +49,13 @@ jobs:
           cd ${{ github.workspace }}\asrd
           echo "cvarlist log cvars-client.txt; quit" > reactivedrop/cfg/test.cfg
           cmd /c start /wait reactivedrop.exe -textmode +exec test
+          mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/client.log
       - name: Run the server
         run: |
           cd ${{ github.workspace }}\asrd
           echo "sv_lan 1; map lobby; cvarlist log cvars-server.txt; quit" > reactivedrop/cfg/servertest.cfg
           cmd /c start /wait srcds_console.exe -console -condebug -conclearlog -game reactivedrop -noassert +exec servertest
+          mv ${{ github.workspace }}/asrd/console.log ${{ github.workspace }}/asrd/server.log
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -61,3 +63,6 @@ jobs:
           path: |
             ${{ github.workspace }}/asrd/reactivedrop/cvars-client.txt
             ${{ github.workspace }}/asrd/reactivedrop/cvars-server.txt
+            ${{ github.workspace }}/asrd/client.log
+            ${{ github.workspace }}/asrd/server.log
+
