--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -48,14 +48,14 @@ jobs:
         run: |
           cd ${{ github.workspace }}\asrd
           echo "cvarlist log cvars-client.txt; quit" > reactivedrop/cfg/test.cfg
-          cmd /c start /wait reactivedrop.exe -textmode +exec test
-          mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/client.log
+          cmd /c start /wait reactivedrop.exe -textmode -condebug -conclearlog +exec test
+          mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/console-client.log
       - name: Run the server
         run: |
           cd ${{ github.workspace }}\asrd
           echo "sv_lan 1; map lobby; cvarlist log cvars-server.txt; quit" > reactivedrop/cfg/servertest.cfg
           cmd /c start /wait srcds_console.exe -console -condebug -conclearlog -game reactivedrop -noassert +exec servertest
-          mv ${{ github.workspace }}/asrd/console.log ${{ github.workspace }}/asrd/server.log
+          mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/console-server.log
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -63,6 +63,6 @@ jobs:
           path: |
             ${{ github.workspace }}/asrd/reactivedrop/cvars-client.txt
             ${{ github.workspace }}/asrd/reactivedrop/cvars-server.txt
-            ${{ github.workspace }}/asrd/client.log
-            ${{ github.workspace }}/asrd/server.log
+            ${{ github.workspace }}/asrd/console-client.log
+            ${{ github.workspace }}/asrd/console-server.log
 
