--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -52,8 +52,8 @@ jobs:
       - name: Run the server
         run: |
           cd ${{ github.workspace }}\asrd
-          echo "cvarlist log cvars-server.txt; quit" > reactivedrop/cfg/servertest.cfg
-          cmd /c start /wait srcds_console.exe -console -condebug -conclearlog -game reactivedrop -noassert +sv_lan 1 +exec servertest +map lobby
+          echo "cvarlist log cvars-server.txt; map lobby; quit" > reactivedrop/cfg/servertest.cfg
+          cmd /c start /wait srcds_console.exe -console -condebug -conclearlog -game reactivedrop -noassert +sv_lan 1 +exec servertest
           mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/console-server.log
       - name: Upload artifact
         uses: actions/upload-artifact@v4
