--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -27,15 +27,22 @@ jobs:
       - name: Run the client
         run: |
           cd ${{ github.workspace }}\asrd
-          echo "cvarlist log cvars-client.txt; quit" > reactivedrop/cfg/test.cfg
+          echo "version; cvarlist log cvars-client.txt; quit" > reactivedrop/cfg/test.cfg
           cmd /c start /wait reactivedrop.exe -textmode -condebug -conclearlog +exec test
           mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/console-client.log
       - name: Run the server
         run: |
           cd ${{ github.workspace }}\asrd
-          echo "cvarlist log cvars-server.txt; map lobby; quit" > reactivedrop/cfg/servertest.cfg
+          echo "version; cvarlist log cvars-server.txt; map lobby; quit" > reactivedrop/cfg/servertest.cfg
           cmd /c start /wait srcds_console.exe -console -condebug -conclearlog -game reactivedrop -noassert +sv_lan 1 +exec servertest
           mv ${{ github.workspace }}/asrd/reactivedrop/console.log ${{ github.workspace }}/asrd/console-server.log
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+      - name: Generate convarlist
+        run:
+          php generate-convarlist "${{ github.workspace }}" > ${{ github.workspace }}/asrd/convarlist.wiki.txt
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -45,4 +52,5 @@ jobs:
             ${{ github.workspace }}/asrd/reactivedrop/cvars-server.txt
             ${{ github.workspace }}/asrd/console-client.log
             ${{ github.workspace }}/asrd/console-server.log
+            ${{ github.workspace }}/asrd/convarlist.wiki.txt
 
