--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -41,8 +41,8 @@ jobs:
         with:
           php-version: '8.4'
       - name: Generate convarlist
-        run:
-          cd ${{ github.workspace }}\asrd
+        run: |
+          cd ${{ github.workspace }}
           php generate-convarlist "${{ github.workspace }}" > ${{ github.workspace }}/asrd/convarlist.wiki.txt
       - name: Upload artifact
         uses: actions/upload-artifact@v4
