--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -53,6 +53,7 @@ jobs:
   generate-files:
     name: generate additional files
     runs-on: ubuntu-latest
+    needs: run-game
     timeout-minutes: 5
     steps:
       - name: Download artifacts
