--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -60,9 +60,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: rd-artifacts
-          path: .
+          path: asrd
 
-      - name: List files
+      - name: List artifacts
         run: |
           find . -type f
 
