--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -49,6 +49,19 @@ jobs:
             ${{ github.workspace }}/asrd/console-client.log
             ${{ github.workspace }}/asrd/console-server.log
 
+  dispatch-anticheat:
+    name: dispatch anticheat build
+    if: github.ref == 'refs/heads/x-master'
+    runs-on: ubuntu-latest
+    needs: run-game
+    timeout-minutes: 5
+    steps:
+      - name: Dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          repository: ${{ github.repository_owner }}/reactive-drop-anticheat
+          token: ${{ secrets.CR_PAT }}
+          event-type: build
 
   generate-files:
     name: generate additional files
@@ -56,6 +69,9 @@ jobs:
     needs: run-game
     timeout-minutes: 5
     steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -65,9 +81,6 @@ jobs:
       - name: List artifacts
         run: |
           find . -type f
-
-      - name: Checkout project
-        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
