--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -51,7 +51,7 @@ jobs:
 
   dispatch-anticheat:
     name: dispatch anticheat build
-    if: github.ref == 'refs/heads/x-master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: run-game
     timeout-minutes: 5
