store depotcache in artifact

--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -32,16 +32,6 @@ jobs:
       - name: Download the game
         run: steamcmd +force_install_dir ${{ github.workspace }}\asrd +logon anonymous +app_update 563560 -beta beta +app_update 1007 +quit
 
-      - name: Cleanup
-        run: |
-          ./cleanup-steamcmd.ps1 ${{ github.workspace }}\asrd
-
-      - name: Generate checksums
-        run: |
-          ./generate-checksums.ps1 ${{ github.workspace }}\asrd
-          cat checksums.txt
-          mv -f checksums.txt ${{ github.workspace }}\asrd\reactivedrop\checksums.txt
-
       - name: Run the client
         run: |
           cd ${{ github.workspace }}\asrd
@@ -64,8 +54,7 @@ jobs:
             ${{ github.workspace }}/asrd/reactivedrop/cvars-client.txt
             ${{ github.workspace }}/asrd/reactivedrop/cvars-server.txt
             ${{ github.workspace }}/asrd/console-client.log
-            ${{ github.workspace }}/asrd/console-server.log
-            ${{ github.workspace }}/asrd/reactivedrop/checksums.txt
+            C:\hostedtoolcache\windows\steamcmd\latest\i386\depotcache\*
 
   dispatch-anticheat:
     name: dispatch anticheat build
